--- a/1.1.1.Описание автоматизируемых бизнес-процессов/1.1.1.Описание автоматизируемых бизнес-процессов.md
+++ b/1.1.1.Описание автоматизируемых бизнес-процессов/1.1.1.Описание автоматизируемых бизнес-процессов.md
@@ -1,33 +1,32 @@
-﻿**Описание автоматизируемых бизнес-процессов**
-
-1. **Процесс покупки товара клиентом:**
+﻿# Описание автоматизируемых бизнес-процессов
+## 1. Процесс покупки товара клиентом:
 
    Пользователь должен иметь возможность просматривать каталог товаров, добавлять выбранные товары в корзину и осуществлять оплату заказа. Система должна обеспечивать удобный и безопасный процесс оплаты, включая выбор способа оплаты и ввод необходимой информации.
 
-2. **Управление ассортиментом и заказами администратором:**
+## 2. Управление ассортиментом и заказами администратором:
 
    Администратор должен иметь возможность добавлять, удалять и редактировать товары в каталоге, устанавливать цены и количество товаров на складе. Также необходимо обеспечить возможность просмотра и обработки заказов.
 
-3. **Разграничение доступа и мониторинг состояния системы:**
+## 3. Разграничение доступа и мониторинг состояния системы:
 
    Система должна предоставлять различные уровни доступа для сотрудников с учетом их ролей . Также необходимо предусмотреть мониторинг состояния системы, включая отслеживание заказов, статистику посещаемости и другие ключевые метрики.
 
-4. **Управление клиентской базой данных:**
+## 4. Управление клиентской базой данных:
 
    Система должна позволять управлять информацией о клиентах, включая регистрацию новых пользователей, хранение персональных данных и истории заказов. Также необходимо предусмотреть возможность отправки уведомлений и рассылок клиентам.
 
-5. **Обработка возвратов:**
+## 5. Обработка возвратов:
 
    Система должна обеспечивать удобный процесс обработки возвратов.
 
-6. **Учет финансовых операций и отчетность:**
+## 6. Учет финансовых операций и отчетность:
 
    Система должна автоматически фиксировать все финансовые операции, включая продажи, оплаты и расходы. Также необходимо предоставить возможность генерации финансовых отчетов, таких как отчеты о продажах, прибыли и налоговой отчетности.
 
-7. **Интеграция с внешними системами:**
+## 7. Интеграция с внешними системами:
 
    Необходимо обеспечить интеграцию с внешними системами для обмена данных и автоматизации процессов.
 
-8. **Аналитика и прогнозирование:**
+## 8. Аналитика и прогнозирование:
 
    Важно иметь возможность анализировать данные о продажах, клиентах и других метриках для принятия информированных решений. Система должна предоставлять аналитические инструменты и возможность прогнозирования спроса на товары.
