--- a/1.1.2.UserStory/1.1.2 Описание бизнес-требований(UserStory).md
+++ b/1.1.2.UserStory/1.1.2 Описание бизнес-требований(UserStory).md
@@ -33,3 +33,13 @@
 
    ### 1.11. Поддержка
    Как покупатель, я хочу иметь возможность обратиться в службу поддержки, которая в короткие сроки сможет помочь с моей потенциальной проблемой или вопросом.
+
+## 2. Администратор
+   ### 1.1.	Управление каталогом товаров
+   Как администратор магазина, я хочу иметь возможность управлять каталогом товаров, чтобы добавлять новые товары, редактировать существующие и удалять неактуальные.
+
+   ### 1.2.	Управление акциями и скидками
+   Как администратор магазина, я хочу создавать и управлять акциями и скидками, чтобы привлекать клиентов и повышать продажи.
+
+   ### 1.3.	Мониторинг статистики продаж
+   Как администратор магазина, я хочу просматривать статистику продаж и другие аналитические данные, чтобы анализировать эффективность работы магазина и принимать информированные решения.
